...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="k1Y-lu-rou" id="5Qe-OW-woI"/>
                            <outlet property="delegate" destination="k1Y-lu-rou" id="QJE-Bt-kkt"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Now" id="jxx-XF-gmx">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kk7-Kl-HvD">
                            <color key="tintColor" red="0.49269583789999999" green="0.33591115869999999" blue="0.072871186589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="SZN-3e-pE2" kind="modal" id="HfP-0m-YpZ"/>
                            </connections>
                        </barButtonItem>
...
            </objects>
            <point key="canvasLocation" x="1634.7826086956522" y="-413.83928571428572"/>
        </scene>
        <!--Add Book-->
        <scene sceneID="XyA-rn-ydm">
            <objects>
                <tableViewController title="Add Book" id="TEK-A2-dcC" customClass="BookDeatilsViewController" customModule="Booklog" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="VUm-t7-w60">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <sections>
                            <tableViewSection headerTitle="Title" id="dNm-zC-AFY">
...
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="iA5-iZ-R8a">
                            <color key="tintColor" red="0.49269583789999999" green="0.33591115869999999" blue="0.072871186589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="KlZ-bW-gUK" kind="unwind" unwindAction="cancelToBooksViewControllerWithSegue:" id="gp2-d9-2aK"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="Vg8-FW-yMJ">
                            <color key="tintColor" red="0.49269583789999999" green="0.33591115869999999" blue="0.072871186589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="KlZ-bW-gUK" kind="unwind" identifier="SaveBookDetails" unwindAction="saveBookDetailsWithSegue:" id="87O-xg-bnZ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="748-h4-Clx" id="flG-GX-uwD"/>
                            <outlet property="delegate" destination="748-h4-Clx" id="5iK-1A-QCh"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Before" id="ev2-bh-MXp">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="YgC-TZ-ROg">
                            <color key="tintColor" red="0.49269583789999999" green="0.33591115869999999" blue="0.072871186589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="cWt-kq-JXP" kind="modal" id="aXe-yZ-VDw"/>
                            </connections>
                        </barButtonItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="wyY-tD-PFJ" id="bcP-ho-xfc"/>
                            <outlet property="delegate" destination="wyY-tD-PFJ" id="GXL-06-ore"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Backlog" id="xhU-2z-qtb">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FeZ-c1-O3L">
                            <color key="tintColor" red="0.49269583789999999" green="0.33591115869999999" blue="0.072871186589999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="7dU-Av-nIs" kind="modal" id="kri-gF-VXv"/>
                            </connections>
                        </barButtonItem>
...
